@@ -1,3 +1,7 @@
+version 2015-03-23
+      Change to autoload approach
+      Create dao after plugin activation
+
 version 2015-03-04
       Simplify code by moving html into a separate file
       Add subscriber id and uniqid as subscriber data fields
